hphp/test/zend/bad/Zend/tests/bug39304_2_4.php
<?php 
  $s = "";
  list($a, $b) = $s[0];
  var_dump($a,$b);
?>